pop up message fixing

--- a/index.html
+++ b/index.html
@@ -473,10 +473,10 @@
 
           <!-- confirmation message -->
           <div class="confirmation-message__container" id="confirmation-message" role="dialog"
-            aria-labelledby="confirmation-message-label">
+            aria-labelledby="Booking Summary">
             <div class="confirmation-message__content">
               <header>
-                <h3 id="confirmation-message-label">Booking Summary</h3>
+                <h3 id="modalTitle" tabindex="0">Booking Summary</h3>
                 <span class="confirmation-message__close-button" role="button" tabindex="0"
                   aria-label="Close this message box">&times;</span>
               </header>
