that's it before testing

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
       <section class="findus" id="findus" aria-label="find us">
         <div class="findus__container">
           <div class="logofont__container">
-            <p class="logofont" aria-hidden="true">R2 Place</p>
+            <p class="logofont" role="presentation">R2 Place</p>
           </div>
 
           <!-- contact information-->
