amend index.html

--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
   <meta name="twitter:image:alt" content="Interior of R2 Place">
   <meta name="twitter:image" content="https://mtw72.github.io/R2-revising/images/twitter-image.jpeg">
 
-  <!-- <meta itemprop="description" content="A place to Relax and Recharge.">
-  <meta itemprop="url" content="https://mtw72.github.io/R2-revising/"> -->
-
   <meta property="og:url" content="https://mtw72.github.io/R2-revising/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="R2 Place">
@@ -31,28 +28,26 @@
   <link rel="canonical" href="https://mtw72.github.io/R2-revising/">
 
   <!-- Critical resources -->
-  <!-- google fonts -->
-  <!-- <link rel="stylesheet" href="./dist/styles/googlefont.css"> -->
-  <!-- loader -->
-  <!-- <link rel="stylesheet" href="./dist/styles/loader.css">
-  <script src="./dist/scripts/critical-modern-script.js"></script>
-
-  <link rel="stylesheet" href="./dist/styles/critical-style.css"> -->
+  <!-- Google fonts -->
+  <link rel="stylesheet" href="./dist/styles/googlefont.min.css">
+  <!-- Loader -->
+  <link rel="stylesheet" href="./dist/styles/loader.min.css">
+  <link rel="stylesheet" href="./dist/styles/critical-style.min.css">
+  <script src="./dist/scripts/critical-modern-script.min.js"></script>
 
   <!-- Non-critical resources -->
-  <!-- <link rel="preload" href="./dist/styles/non-critical-style.css" as="style"
+  <link rel="preload" href="./dist/styles/non-critical-style.min.css" as="style"
     onload="this.onload=null;this.rel='stylesheet'">
 
-  <script defer src="./dist/scripts/non-critical-modern-script.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.js"></script> -->
+  <script defer src="./dist/scripts/non-critical-modern-script.min.js"></script>
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js"></script>
 
   <!-- No script -->
-  <!-- <noscript>
+  <noscript>
     <link rel="stylesheet" href="./dist/styles/noscript.css">
-  </noscript> -->
+  </noscript>
 
-
-  <link rel="stylesheet" href="./dist/styles/googlefont.css">
+  <!-- <link rel="stylesheet" href="./dist/styles/googlefont.css">
   <link rel="stylesheet" href="./dist/styles/loader.css">
   <script src="./dist/scripts/critical-modern-script.js"></script>
 
@@ -62,23 +57,7 @@
     onload="this.onload=null;this.rel='stylesheet'">
 
   <script defer src="./dist/scripts/non-critical-modern-script.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.js"></script>
-
-
-
-
-
-  <!-- <link rel="stylesheet" href="./dist/styles/googlefont.min.css">
-  <link rel="stylesheet" href="./dist/styles/loader.min.css">
-  <script src="./dist/scripts/critical-modern-script.min.js"></script>
-
-  <link rel="stylesheet" href="./dist/styles/critical-style.min.css">
-
-  <link rel="preload" href="./dist/styles/non-critical-style.min.css" as="style"
-    onload="this.onload=null;this.rel='stylesheet'">
-
-  <script defer src="./dist/scripts/non-critical-modern-script.min.js"></script>
-  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.min.js"></script> -->
+  <script nomodule defer src="./dist/scripts/non-critical-legacy-script.js"></script> -->
 
 </head>
 
