--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
           <button class="navbar__toggler" type="button" aria-controls="collapsibleNavbar" aria-haspopup="true"
             aria-label="Open Menu" id="menu-toggler">&#9776;</button>
 
-          <div class="navbar__collapse" id="collapsibleNavbar" role="menu" aria-labelledby="menu-toggler">
-            <ul class="navbar__nav" role="group">
-              <li class="navbar__nav-item" role="presentation">
+          <div class="navbar__collapse" id="collapsibleNavbar" aria-labelledby="menu-toggler">
+            <ul class="navbar__nav" aria-label="Navigation in R2 Place">
+              <li class="navbar__nav-item" role="none">
                 <a class="navbar__nav-link" href="#menu" role="menuitem">Menu</a>
               </li>
-              <li class="navbar__nav-item" role="presentation">
+              <li class="navbar__nav-item" role="none">
                 <a class="navbar__nav-link" href="#reservation" role="menuitem">Reservation</a>
               </li>
-              <li class="navbar__nav-item" role="presentation">
+              <li class="navbar__nav-item" role="none">
                 <a class="navbar__nav-link" href="#findus" role="menuitem">Find Us</a>
             </ul>
           </div>
